aplicando cambios de idioma y estandarizando respuestas en facultadoes
