# backend-sigesa/backend-sigesa/resources/lang/es/validation.php
@@ -1,0 +1,167 @@
+<?php
+
+return [
+    /*
+    |--------------------------------------------------------------------------
+    | Validation Language Lines
+    |--------------------------------------------------------------------------
+    |
+    | The following language lines contain the default error messages used by
+    | the validator class. Some of these rules have multiple versions such
+    | as the size rules. Feel free to tweak each of these messages here.
+    |
+    */
+
+    'accepted' => 'El campo :attribute debe ser aceptado.',
+    'active_url' => 'El campo :attribute no es una URL válida.',
+    'after' => 'El campo :attribute debe ser una fecha posterior a :date.',
+    'after_or_equal' => 'El campo :attribute debe ser una fecha posterior o igual a :date.',
+    'alpha' => 'El campo :attribute solo puede contener letras.',
+    'alpha_dash' => 'El campo :attribute solo puede contener letras, números, guiones y guiones bajos.',
+    'alpha_num' => 'El campo :attribute solo puede contener letras y números.',
+    'array' => 'El campo :attribute debe ser un array.',
+    'before' => 'El campo :attribute debe ser una fecha anterior a :date.',
+    'before_or_equal' => 'El campo :attribute debe ser una fecha anterior o igual a :date.',
+    'between' => [
+        'numeric' => 'El campo :attribute debe estar entre :min y :max.',
+        'file' => 'El archivo :attribute debe pesar entre :min y :max kilobytes.',
+        'string' => 'El campo :attribute debe tener entre :min y :max caracteres.',
+        'array' => 'El campo :attribute debe tener entre :min y :max elementos.',
+    ],
+    'boolean' => 'El campo :attribute debe ser verdadero o falso.',
+    'confirmed' => 'La confirmación de :attribute no coincide.',
+    'date' => 'El campo :attribute no es una fecha válida.',
+    'date_equals' => 'El campo :attribute debe ser una fecha igual a :date.',
+    'date_format' => 'El campo :attribute no corresponde al formato :format.',
+    'different' => 'Los campos :attribute y :other deben ser diferentes.',
+    'digits' => 'El campo :attribute debe tener :digits dígitos.',
+    'digits_between' => 'El campo :attribute debe tener entre :min y :max dígitos.',
+    'dimensions' => 'Las dimensiones de la imagen :attribute no son válidas.',
+    'distinct' => 'El campo :attribute contiene un valor duplicado.',
+    'email' => 'El campo :attribute debe ser una dirección de correo válida.',
+    'ends_with' => 'El campo :attribute debe terminar con uno de los siguientes valores: :values.',
+    'exists' => 'El valor seleccionado en :attribute no es válido.',
+    'file' => 'El campo :attribute debe ser un archivo.',
+    'filled' => 'El campo :attribute es obligatorio.',
+    'gt' => [
+        'numeric' => 'El campo :attribute debe ser mayor que :value.',
+        'file' => 'El archivo :attribute debe pesar más de :value kilobytes.',
+        'string' => 'El campo :attribute debe tener más de :value caracteres.',
+        'array' => 'El campo :attribute debe tener más de :value elementos.',
+    ],
+    'gte' => [
+        'numeric' => 'El campo :attribute debe ser mayor o igual que :value.',
+        'file' => 'El archivo :attribute debe pesar :value o más kilobytes.',
+        'string' => 'El campo :attribute debe tener :value o más caracteres.',
+        'array' => 'El campo :attribute debe tener :value elementos o más.',
+    ],
+    'image' => 'El campo :attribute debe ser una imagen.',
+    'in' => 'El valor seleccionado en :attribute no es válido.',
+    'in_array' => 'El campo :attribute no existe en :other.',
+    'integer' => 'El campo :attribute debe ser un número entero.',
+    'ip' => 'El campo :attribute debe ser una dirección IP válida.',
+    'ipv4' => 'El campo :attribute debe ser una dirección IPv4 válida.',
+    'ipv6' => 'El campo :attribute debe ser una dirección IPv6 válida.',
+    'json' => 'El campo :attribute debe ser una cadena JSON válida.',
+    'lt' => [
+        'numeric' => 'El campo :attribute debe ser menor que :value.',
+        'file' => 'El archivo :attribute debe pesar menos de :value kilobytes.',
+        'string' => 'El campo :attribute debe tener menos de :value caracteres.',
+        'array' => 'El campo :attribute debe tener menos de :value elementos.',
+    ],
+    'lte' => [
+        'numeric' => 'El campo :attribute debe ser menor o igual que :value.',
+        'file' => 'El archivo :attribute debe pesar :value o menos kilobytes.',
+        'string' => 'El campo :attribute debe tener :value caracteres o menos.',
+        'array' => 'El campo :attribute no debe tener más de :value elementos.',
+    ],
+    'max' => [
+        'numeric' => 'El campo :attribute no debe ser mayor que :max.',
+        'file' => 'El archivo :attribute no debe pesar más de :max kilobytes.',
+        'string' => 'El campo :attribute no debe tener más de :max caracteres.',
+        'array' => 'El campo :attribute no debe tener más de :max elementos.',
+    ],
+    'mimes' => 'El campo :attribute debe ser un archivo de tipo: :values.',
+    'mimetypes' => 'El campo :attribute debe ser un archivo de tipo: :values.',
+    'min' => [
+        'numeric' => 'El campo :attribute debe ser de al menos :min.',
+        'file' => 'El archivo :attribute debe pesar al menos :min kilobytes.',
+        'string' => 'El campo :attribute debe tener al menos :min caracteres.',
+        'array' => 'El campo :attribute debe tener al menos :min elementos.',
+    ],
+    'not_in' => 'El valor seleccionado en :attribute no es válido.',
+    'not_regex' => 'El formato del campo :attribute no es válido.',
+    'numeric' => 'El campo :attribute debe ser numérico.',
+    'password' => 'La contraseña es incorrecta.',
+    'present' => 'El campo :attribute debe estar presente.',
+    'regex' => 'El formato de :attribute es inválido.',
+    'required' => 'El campo :attribute es obligatorio.',
+    'required_if' => 'El campo :attribute es obligatorio cuando :other es :value.',
+    'required_unless' => 'El campo :attribute es obligatorio a menos que :other esté en :values.',
+    'required_with' => 'El campo :attribute es obligatorio cuando :values está presente.',
+    'required_with_all' => 'El campo :attribute es obligatorio cuando :values están presentes.',
+    'required_without' => 'El campo :attribute es obligatorio cuando :values no está presente.',
+    'required_without_all' => 'El campo :attribute es obligatorio cuando ninguno de :values está presente.',
+    'same' => 'Los campos :attribute y :other deben coincidir.',
+    'size' => [
+        'numeric' => 'El campo :attribute debe ser :size.',
+        'file' => 'El archivo :attribute debe pesar :size kilobytes.',
+        'string' => 'El campo :attribute debe tener :size caracteres.',
+        'array' => 'El campo :attribute debe contener :size elementos.',
+    ],
+    'starts_with' => 'El campo :attribute debe comenzar con uno de los siguientes valores: :values.',
+    'string' => 'El campo :attribute debe ser una cadena de caracteres.',
+    'timezone' => 'El campo :attribute debe ser una zona horaria válida.',
+    'unique' => 'El campo :attribute ya ha sido registrado.',
+    'uploaded' => 'Subir :attribute ha fallado.',
+    'url' => 'El formato :attribute es inválido.',
+    'uuid' => 'El campo :attribute debe ser un UUID válido.',
+
+    /*
+    |--------------------------------------------------------------------------
+    | Custom Validation Language Lines
+    |--------------------------------------------------------------------------
+    |
+    | Here you may specify custom validation messages for attributes using the
+    | convention "attribute.rule" to name the lines. This makes it quick to
+    | specify a specific custom language line for a given attribute rule.
+    |
+    */
+
+    'custom' => [
+        'attribute-name' => [
+            'rule-name' => 'custom-message',
+        ],
+    ],
+
+    /*
+    |--------------------------------------------------------------------------
+    | Custom Validation Attributes
+    |--------------------------------------------------------------------------
+    |
+    | The following language lines are used to swap our attribute placeholder
+    | with something more reader friendly such as "E-Mail Address" instead
+    | of "email". This simply helps us make our message more expressive.
+    |
+    */
+
+    'attributes' => [
+        'nombre_facultad' => 'nombre de facultad',
+        'codigo_facultad' => 'código de facultad',
+        'pagina_facultad' => 'página de facultad',
+        'id_usuario_updated_facultad' => 'usuario que actualiza',
+        'nombre_carrera' => 'nombre de carrera',
+        'codigo_carrera' => 'código de carrera',
+        'pagina_carrera' => 'página de carrera',
+        'facultad_id' => 'facultad',
+        'modalidad_id' => 'modalidad',
+        'carrera_id' => 'carrera',
+        'nombre_modalidad' => 'nombre de modalidad',
+        'codigo_modalidad' => 'código de modalidad',
+        'descripcion_modalidad' => 'descripción de modalidad',
+        'estado_modalidad' => 'estado de modalidad',
+        'email' => 'correo electrónico',
+        'password' => 'contraseña',
+        'password_confirmation' => 'confirmación de contraseña',
+    ],
+];
